--- a/styles.css
+++ b/styles.css
@@ -7,4 +7,19 @@ body {
 
 #logo {
     width: max(10rem, 18vw);
+    background-color: #0a0a23;
+    aspect-ratio: 35 / 4;
+    padding: 0.4rem;
+}
+
+header {
+  background-color: #1b1b32;
+  height: 50px;
+  width: 100%;
+  display: flex;
+}
+
+h1 {
+  color: #f1be32;
+  font-size: min(5vw, 1.2em);
 }
