--- a/styles.css
+++ b/styles.css
@@ -48,3 +48,15 @@ h2 {
   white-space: nowrap;
   border: 0;
 }
+
+p::before {
+  content: "Question #";
+}
+
+nav li {
+  color: #dfdfe2;
+  margin: 0 0.2rem;
+  padding: 0.2rem;
+  display: block;
+  
+}
